# job-tracker-updated

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  main.py
backend/app/api/: schemas.py
backend/app/api/routers/: analytics.py  applications.py  auth.py  automation.py  profile.py
backend/app/models/: __init__.py  application.py  audit.py  email.py  job_posting.py  paused_session.py  profile.py  resume_variant.py  source.py  tag.py  token.py
backend/app/services/ats/: __init__.py  ashby.py  base.py  greenhouse.py  icims.py  indeed.py  lever.py  linkedin.py  registry.py  workday.py
backend/app/services/automation/: runner.py
backend/app/services/email/: gmail.py  parser.py  scanner.py
backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py
backend/app/services/notifications/: __init__.py  telegram.py
backend/app/services/sources/: __init__.py  base.py  greenhouse_board.py  registry.py  scorer.py
backend/app/workers/: celery_app.py  tasks.py
docs/: ARCHITECTURE.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: StatusBadge.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Analytics.tsx  ApplicationDetail.tsx  Dashboard.tsx  Paused.tsx  (+4 more)
k8s/: backend.yaml  configmap.yaml  frontend.yaml  postgres.yaml  redis.yaml  secrets.example.yaml  worker.yaml
