[project]
name = "jobtracker-backend"
version = "0.1.0"
description = "Job application tracker with email integration and autonomous apply engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.149",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "playwright>=1.48",
    "anthropic>=0.39",
    "openai>=1.54",
    "python-telegram-bot>=21.6",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pypdf>=5.1",
    "tenacity>=9.0",
    "structlog>=24.4",
    "rapidfuzz>=3.10",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
